assets/css/dark.css
/* ... */
#categories a:hover, #categories a:focus {
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cpath fill='%23ca7740' d='M63 37.9v20.3c-.2 2.3-2.6 4.5-4.9 4.7l-20.3.1a4.3 4.3 0 01-2.9-1.4L2.3 29.2a4.3 4.3 0 010-6.1L23.1 2.3a4.3 4.3 0 016.1 0l32.5 32.5c.9.8 1.3 1.9 1.3 3.2zm-9.3 5.5a7.3 7.3 0 10-10.3 10.2 7.3 7.3 0 0010.3 0 7.1 7.1 0 000-10.2z'/%3E%3C/svg%3E") no-repeat left center / 12px;
}
#categories .pure-u-1.pure-md-1-3 {
  margin: 0 auto;
  width: 15%;
  white-space: nowrap;
}
#watch_sidebar, #related, #vidinfo {
  padding: 3% 5%;
  line-height: 1.3;
  font-size: 95%;
  border-radius: 4px;
  background: rgba(255,255,255,.1);
}
#vidinfo {
  margin: 0 20px;
  width: calc(90% - 40px);
}
@keyframes fade {
  from {filter: opacity(0)}
  to {filter: opacity(1)}
}
@keyframes fade-out {
  from {filter: opacity(1)}
  to {filter: opacity(0)}
}
@keyframes remove-bg {
  0,99% {background-image: url(/nothumb.svg)}
  100% {background-image: none}
}
@media screen and (max-width: 400px) {
  #categories a, #categories a:hover, #categories a:focus, #categories b {
    padding-left: 0;
    font-size: 90%;
    background: none;
  }
}
input, input[type=checkbox], input[type=radio] {
  accent-color: #c19f9f;
}
input[type=checkbox], input[type=radio] {
  width: 22px;
  height: 22px;
  cursor: pointer;
}
input:hover, input:focus,
input[type=checkbox]:hover, input[type=radio]:hover,
input[type=checkbox]:focus, input[type=radio]:focus {
  accent-color: #ca7740;
}
#related .yt_author a {
  font-weight: 700;
}
#subscribe {
 position: absolute;
 top: 5px;
 right: 5px;
}
@media screen and (max-width: 1000px) {
  .subscribers, .subscribers + p {
    font-size: 90%;
  }
}
@media screen and (max-width: 600px) {
  #logo h1.pure-menu-heading::after {
    background-size: 90%;
  }
  .h-box h3 {
    display: none;
  }
}
@media screen and (min-width: 1200px) {
  .thumbcontainer {
    border: 1px solid #181414;
    box-shadow: inset 0 0 0 1px #353232;
    background: #211e1e;
  }
  #related .thumbcontainer {
    padding: 12px;
  }
  .imagethumb .icon-buttons {
    top: 2px;
    left: 20px;
    z-index: 10;
    background: none;
    contain: layout;
    animation: ease fade .1s 4s both;
  }
  .flex-left.yt_uploaded {
    position: absolute;
    right: 15px;
    bottom: 15px;
    contain: layout;
    animation: ease fade .1s 4s both;
  }
  .flex-right.yt_views, .yt_views {
    padding: 0 8px 17px 9px;
    width: calc(100% - 36px);
    position: absolute;
    top: 3px;
    right: 18px;
    z-index: 200;
    box-sizing: border-box;
    background: rgba(0,0,0,.65);
    contain: layout;
    pointer-events: none;
    animation: ease fade .1s 4s both;
    will-change: transform;
  }
  .flex-right.yt_views p {
    text-align: right;
  }
  .video-card-row + .video-card-row {
    margin-bottom: -6px;
    border-top: none;
  }
  .yt_channel {
    margin-top: 2px;
  }
  #related .yt_views {
    padding: 4px 8px;
    width: calc(100% - 6px);
    left: 3px;
    box-sizing: border-box;
    font-size: 85%;
    color: #fff;
  }
  #related .vidtitle {
    margin: 3px 0 -3px;
    line-height: 1.1;
    font-size: 85%;
  }
  #related .length {
    margin-right: -1px;
  }
  #related .yt_author {
    padding: 4px 8px;
    position: absolute;
    top: 3px;
    left: 3px;
    z-index: 9999;
    box-sizing: border-box;
    font-size: 85%;
}
  .imagethumb .yt_author p.channel-name {
    padding-left: 15px;
    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cg stroke-width='.8'%3E%3Cpath fill='%23fca' d='M54 23c-1-4-5-5-9-4-2 1-6 2-13 2s-11-1-13-2c-3-1-8 0-9 4-5 17 5 41 22 41 18 0 27-26 22-41z'/%3E%3Cpath fill='%236c5d53' d='M57 14c0-5-4-8-8-10-8-4-18-5-27-3l-7 5c-3 1-5 3-6 6s-4 5-4 8c-1 6 1 12 4 17l1-10c1-4 6-6 9-4 7 2 14 2 21 1l7-2c4 0 8 3 8 7v9c2-1 3-4 4-6 1-6 0-12-2-18z'/%3E%3C/g%3E%3C/svg%3E") no-repeat left center / 12px;
  }
  .imagethumb .yt_uploaded p {
    padding-left: 16px;
    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cg stroke='%23fff' transform='translate(-.1 -.1) scale(1.03203)'%3E%3Cg fill='none'%3E%3Ccircle cx='31.1' cy='31.1' r='28.1' stroke-width='5.8'/%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='5.2' d='M30.7 13.2v18.5h16.5'/%3E%3C/g%3E%3Ccircle cx='31.1' cy='31.1' r='4.5' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E") no-repeat left center / 12px;
  }
}

